# ChessboardCalibration

./: .gitignore  CMakeLists.txt  README.md  SettingsFile.xml  SettingsFiles.xml  imagesList.xml  main.py  out_camera_data_left.xml  out_camera_data_right.xml
src/: Settings.cpp  Settings.h  main.cpp
